# kancell-shield-v3

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_PHASE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  opencode.yml
docs/: ARCHITECTURE_REVIEW_1.md  ARCHITECTURE_REVIEW_2.md  DISCOVERY_ENGINE.md  KEYWORD_ENGINE.md  SEARCH_ENGINE.md  SEARCH_PROVIDER_SDK.md
src/: __init__.py
src/core/: __init__.py  constants.py  enums.py  exceptions.py  identifiers.py  types.py  value_objects.py
src/discovery/: __init__.py  candidate_queue.py  collector.py  engine.py  exceptions.py  filter.py  interfaces.py  metrics.py  models.py  orchestrator.py  pipeline.py  provider_adapter.py  provider_pipeline.py  provider_registry.py  provider_selector.py  scheduler.py  scorer.py  state_manager.py  validator.py
src/keyword/: __init__.py  deduplicator.py  exceptions.py  generator.py  interfaces.py  models.py  normalizer.py  template_engine.py
src/search/: __init__.py  engine.py  exceptions.py  interfaces.py  mock_provider.py  models.py  normalizer.py  query_builder.py  rate_limiter.py  registry.py  retry.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_candidate_queue.py  test_core_domain.py  test_deduplicator.py  test_discovery_engine.py  test_discovery_models.py  test_discovery_provider.py  test_events.py  test_exceptions.py  test_generator.py  test_keyword_models.py  test_normalizer.py  test_orchestrator.py  test_pipeline.py  test_placeholder.py  test_provider_models.py  test_provider_sdk.py  test_search_engine.py  test_search_exceptions.py  test_search_mock_provider.py  test_search_models.py  test_search_normalizer.py  (+5 more)
(+17 files in other folders)
